--- a/.github/workflows/自动部署代理节点.yml
+++ b/.github/workflows/自动部署代理节点.yml
@@ -222,11 +222,11 @@ jobs:
           echo "DOCKER_IMAGE=${{ secrets.DOCKER_IMAGE }}" >> $GITHUB_ENV
         else
           if [ "${{ github.event.inputs.type }}" = "ws直连" ]; then
-            echo "DOCKER_IMAGE=ghcr.io/zgtcgd/nodews:latest" >> $GITHUB_ENV
+            echo "DOCKER_IMAGE=ghcr.io/eooce/ws:latest" >> $GITHUB_ENV
           elif [ "${{ github.event.inputs.type }}" = "xhttp直连" ]; then
-            echo "DOCKER_IMAGE=ghcr.io/zgtcgd/nodexhp:latest" >> $GITHUB_ENV
+            echo "DOCKER_IMAGE=ghcr.io/eooce/goxhttp:latest" >> $GITHUB_ENV
           else 
-            echo "DOCKER_IMAGE=ghcr.io/zgtcgd/nodealp:latest" >> $GITHUB_ENV
+            echo "DOCKER_IMAGE=ghcr.io/eooce/nodejs:main" >> $GITHUB_ENV
           fi
         fi
         
@@ -263,22 +263,20 @@ jobs:
         
     - name: Set environment variables
       run: |
-        # nodealp镜像基础环境变量,
+        # 基础环境变量
+        cf set-env ${{ env.APP_NAME }} NAME "SAP"
         cf set-env ${{ env.APP_NAME }} UUID "${{ secrets.UUID }}"
-        cf set-env ${{ env.APP_NAME }} VLPATH "${{ secrets.VLPATH }}"
-        cf set-env ${{ env.APP_NAME }} XHPPATH "${{ secrets.XHPPATH }}"
-        cf set-env ${{ env.APP_NAME }} NVERSION "${{ secrets.NVERSION }}"
-        cf set-env ${{ env.APP_NAME }} NSERVER "${{ secrets.NSERVER }}"
-        cf set-env ${{ env.APP_NAME }} NPORT "${{ secrets.NPORT }}"
-        cf set-env ${{ env.APP_NAME }} NKEY "${{ secrets.NKEY }}"
-        cf set-env ${{ env.APP_NAME }} V_PORT "${{ secrets.V_PORT }}"
-        cf set-env ${{ env.APP_NAME }} V_DOMAIN "${{ secrets.V_DOMAIN }}"
-        cf set-env ${{ env.APP_NAME }} V_AUTH "${{ secrets.V_AUTH }}"
-        cf set-env ${{ env.APP_NAME }} SNAME "${{ secrets.SNAME }}"
-        cf set-env ${{ env.APP_NAME }} SURL "${{ secrets.SURL }}"
-        # 直连项，argo不用设置
-        cf set-env ${{ env.APP_NAME }} MY_DOMAIN "${{ secrets.MY_DOMAIN }}"
-        cf set-env ${{ env.APP_NAME }} LOCAL_DOMAIN "${{ secrets.LOCAL_DOMAIN }}"
+        cf set-env ${{ env.APP_NAME }} NEZHA_SERVER "${{ secrets.NEZHA_SERVER }}"
+        cf set-env ${{ env.APP_NAME }} NEZHA_PORT "${{ secrets.NEZHA_PORT }}"
+        cf set-env ${{ env.APP_NAME }} NEZHA_KEY "${{ secrets.NEZHA_KEY }}"
+        cf set-env ${{ env.APP_NAME }} ARGO_PORT "${{ secrets.ARGO_PORT }}"
+        cf set-env ${{ env.APP_NAME }} ARGO_DOMAIN "${{ secrets.ARGO_DOMAIN }}"
+        cf set-env ${{ env.APP_NAME }} ARGO_AUTH "${{ secrets.ARGO_AUTH }}"
+        cf set-env ${{ env.APP_NAME }} SUB_PATH "${{ secrets.SUB_PATH }}"
+        cf set-env ${{ env.APP_NAME }} CFIP "${{ secrets.CFIP || 'cf.877774.xyz' }}"
+        cf set-env ${{ env.APP_NAME }} CFPORT "${{ secrets.CFPORT }}"
+        cf set-env ${{ env.APP_NAME }} CHAT_ID "${{ secrets.CHAT_ID }}"
+        cf set-env ${{ env.APP_NAME }} BOT_TOKEN "${{ secrets.BOT_TOKEN }}"
 
         # 可选：从文件读取环境变量(如果存在)
         if [ -f .env ]; then
